Fix gap in navbar

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header{
 .nav-container{
     display: flex;
     align-items: center;
-    gap: 5rem;
+    gap: 6rem;
 }
 
 .nav-links{
